samples/_failures_safe/1761513973_17a6eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46cb43e8.c: In function ‘main’:
./samples/SAFE/__tmp_46cb43e8.c:149:47: error: expected ‘)’ at end of input
  149 |         if (fgets(input, sizeof(input), stdin)
      |            ~                                  ^
      |                                               )
./samples/SAFE/__tmp_46cb43e8.c:149:9: error: expected declaration or statement at end of input
  149 |         if (fgets(input, sizeof(input), stdin)
      |         ^~
./samples/SAFE/__tmp_46cb43e8.c:149:9: error: expected declaration or statement at end of input
